@startuml class_diagram
' =============================================================
' Simplified Class Diagram — Video-to-Presentation Service
' =============================================================
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam ArrowColor #1E2761
skinparam classBackgroundColor #CADCFC
skinparam classBorderColor #1E2761
skinparam classFontColor #1E2761

package "video_to_presentation" {

  class VideoController {
    - service : VideoService
    + upload_video(file: MultipartFile) : Job
    + get_status(job_id: str) : Job
    + get_presentation(job_id: str) : Presentation
  }

  class VideoService {
    - extractor  : FrameExtractor
    - recognizer : Recognizer
    - generator  : PresentationGenerator
    - repository : JobRepository
    + process_video(video: VideoFile) : Job
    + get_job(job_id: str) : Job
  }

  class VideoFile {
    - path : str
    - format : str
    + open() : VideoStream
  }

  class FrameExtractor {
    + extract_frames(video: VideoFile) : list<Frame>
  }

  class Frame {
    + index : int
    + timestamp_s : float
    + image : Image
  }

  class Recognizer {
    - border_detector : BorderDetector
    - comparator : SlideComparator
    + recognize(frames: list<Frame>) : list<Slide>
  }

  class BorderDetector {
    + crop_slide(frame: Frame) : Frame
  }

  class SlideComparator {
    + are_similar(a: Frame, b: Frame) : bool
  }

  class Slide {
    + index : int
    + image : Image
    + title : str
    + caption : str
  }

  class PresentationGenerator {
    - theme : str
    + generate(slides: list<Slide>) : Presentation
  }

  class Presentation {
    - slides : list<Slide>
    - format : OutputFormat
    + to_markdown() : str
    + to_marp() : str
    + save(path: str) : void
  }

  class Job {
    + id : str
    + status : JobStatus
    + progress : int
    + result_path : str
  }

  interface JobRepository {
    + save(job: Job) : void
    + find_by_id(id: str) : Job
  }

  enum JobStatus {
    PENDING
    PROCESSING
    COMPLETED
    FAILED
  }

  enum OutputFormat {
    MARKDOWN
    MARP
  }
}

VideoController *-- VideoService : uses

VideoService *-- FrameExtractor : uses
VideoService *-- Recognizer : uses
VideoService *-- PresentationGenerator : uses
VideoService *-- JobRepository : uses
VideoService ..> Job

FrameExtractor ..> VideoFile
FrameExtractor ..> Frame

Recognizer *-- BorderDetector : uses
Recognizer *-- SlideComparator : uses
Recognizer ..> Frame
Recognizer ..> Slide

PresentationGenerator ..> Slide
PresentationGenerator ..> Presentation
Presentation o-- Slide

Job ..> JobStatus
Presentation ..> OutputFormat

@enduml